--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       position: relative;
     }
     .square.o {
-      background-color: #ababab;
+      background-color: #e11df3;
     }
     .square.tw {
       background-color: #ababab;
